--- a/public/assets/css/admin_style.css
+++ b/public/assets/css/admin_style.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
 }
 
 body {
@@ -21,4 +20,8 @@ body {
 .sidebar-menu a {
     text-decoration: none;
     color: #1e1e1e;
+}
+
+.w-full {
+    height: 100%!important;
 }
